# pfiles

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  main.rs
src/core/: archive.rs  fs_ops.rs  mod.rs  preview.rs
